--- a/BodilyInjuryPredictor.ipynb
+++ b/BodilyInjuryPredictor.ipynb
@@ -13,12 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
     "#Standard data-sci libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -27,12 +25,17 @@
     "pd.set_option('display.max_colwidth', -1)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "# Suppress warnings \n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 719,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 720,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 721,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -401,7 +404,7 @@
        "4  2.347260  F    -0.23153 -0.266117 -0.272337 -0.251419  0.0           "
       ]
      },
-     "execution_count": 647,
+     "execution_count": 721,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +734,7 @@
        "4 -0.163872  O    -0.23153 -0.266117 -0.272337 -0.251419  "
       ]
      },
-     "execution_count": 648,
+     "execution_count": 722,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 724,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -844,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1445,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 730,
    "metadata": {},
    "outputs": [
     {
@@ -14139,7 +14142,7 @@
        "4  0        "
       ]
      },
-     "execution_count": 656,
+     "execution_count": 730,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14158,7 +14161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 731,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -14199,7 +14202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 732,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -14243,7 +14246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 733,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -14274,7 +14277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [
     {
@@ -14318,6 +14321,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 735,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Blind_Model_X.45</th>\n",
+       "      <th>Blind_Submodel_Y.29.0</th>\n",
+       "      <th>Blind_Model_Y.29</th>\n",
+       "      <th>Cat8_C</th>\n",
+       "      <th>Cat11_E</th>\n",
+       "      <th>OrdCat_5</th>\n",
+       "      <th>Cat6_D</th>\n",
+       "      <th>Blind_Make_X</th>\n",
+       "      <th>Blind_Make_AL</th>\n",
+       "      <th>Blind_Make_K</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Blind_Model_X.45  Blind_Submodel_Y.29.0  Blind_Model_Y.29  Cat8_C  Cat11_E  \\\n",
+       "0  0.0               0.0                    0.0               0.0     0.0       \n",
+       "1  0.0               0.0                    0.0               0.0     0.0       \n",
+       "2  0.0               0.0                    0.0               0.0     0.0       \n",
+       "3  0.0               0.0                    0.0               0.0     0.0       \n",
+       "4  0.0               0.0                    0.0               0.0     0.0       \n",
+       "\n",
+       "   OrdCat_5  Cat6_D  Blind_Make_X  Blind_Make_AL  Blind_Make_K  \n",
+       "0  0.0       1.0     0.0           0.0            0.0           \n",
+       "1  1.0       0.0     0.0           0.0            0.0           \n",
+       "2  0.0       1.0     0.0           0.0            1.0           \n",
+       "3  1.0       1.0     0.0           0.0            0.0           \n",
+       "4  0.0       0.0     1.0           0.0            0.0           "
+      ]
+     },
+     "execution_count": 735,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = X_train[best_features].copy()\n",
+    "X_val = X_val[best_features].copy()\n",
+    "\n",
+    "X_test = X_test[best_features].copy()\n",
+    "\n",
+    "X_train.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14326,7 +14467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 736,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -14334,40 +14475,24 @@
    },
    "outputs": [],
    "source": [
-    "def allmodels():\n",
-    "    classifiers = [\n",
-    "    AdaBoostRegressor(),\n",
-    "    BaggingRegressor(),\n",
-    "    ExtraTreesRegressor(),\n",
-    "    GradientBoostingRegressor(),\n",
-    "    RandomForestRegressor(),\n",
-    "    PassiveAggressiveRegressor(),\n",
-    "    SGDRegressor(),\n",
-    "    TheilSenRegressor(),\n",
-    "    KNeighborsRegressor(),\n",
-    "    DecisionTreeRegressor(),\n",
-    "    ExtraTreeRegressor()\n",
-    "]\n",
-    "    names = [\n",
-    "    \"AdaBoostRegressor\",\n",
-    "    \"BaggingRegressor\",\n",
-    "    \"ExtraTreesRegressor\",\n",
-    "    \"GradientBoostingRegressor\",\n",
-    "    \"RandomForestRegressor\",\n",
-    "    \"PassiveAggressiveRegressor\",\n",
-    "    \"SGDRegressor\",\n",
-    "    \"TheilSenRegressor\",\n",
-    "    \"KNeighborsRegressor\",\n",
-    "    \"DecisionTreeRegressor\",\n",
-    "    \"ExtraTreeRegressor\"\n",
-    "]\n",
-    "    return classifiers,names\n",
-    "classifiers,names=allmodels()"
+    "all_models = {\n",
+    "    \"AdaBoostRegressor\": AdaBoostRegressor(),\n",
+    "    \"BaggingRegressor\": BaggingRegressor(),\n",
+    "    \"ExtraTreesRegressor\": ExtraTreesRegressor(),\n",
+    "    \"GradientBoostingRegressor\": GradientBoostingRegressor(),\n",
+    "    \"RandomForestRegressor\": RandomForestRegressor(),\n",
+    "    \"PassiveAggressiveRegressor\": PassiveAggressiveRegressor(),\n",
+    "    \"SGDRegressor\": SGDRegressor(),\n",
+    "    \"TheilSenRegressor\": TheilSenRegressor(),\n",
+    "    \"KNeighborsRegressor\": KNeighborsRegressor(),\n",
+    "    \"DecisionTreeRegressor\": DecisionTreeRegressor(),\n",
+    "    \"ExtraTreeRegressor\": ExtraTreeRegressor()   \n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -14379,28 +14504,33 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "ignored",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a5a55f5080d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassifiers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mpredictions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'classifiers' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoostRegressor -15630.70702803536\n",
+      "BaggingRegressor -247.34686374164463\n",
+      "ExtraTreesRegressor -83.90742722103158\n",
+      "GradientBoostingRegressor -1714.6145155864203\n",
+      "RandomForestRegressor -208.95509852115293\n",
+      "PassiveAggressiveRegressor -21327.89307233195\n",
+      "SGDRegressor -15037.951812953068\n"
      ]
     }
    ],
    "source": [
-    "iterations=2\n",
-    "for i in range(iterations):  \n",
-    "    result=[]\n",
-    "    for classifier,name in zip(classifiers,names):\n",
-    "        classifier.fit(X_train, Y_train)\n",
-    "        predictions=classifier.predict(X_test)\n",
-    "        predictions[predictions<0]=0\n",
-    "        result.append(rmse(predictions,Y_test))\n",
-    "    model_result=pd.DataFrame(data=result,index=names,columns=['rmse']).sort_values(by=\"rmse\" , ascending=True)\n",
-    "    print(model_result)"
+    "result = {}\n",
+    "kfold = KFold(n_splits=10, shuffle = True, random_state=6)\n",
+    "scoring = 'neg_mean_squared_error'\n",
+    "for name,model in all_models.items():\n",
+    "#     model.fit(X_train, Y_train)\n",
+    "#     predictions = model.predict(X_test)\n",
+    "#     predictions[predictions<0] = 0\n",
+    "#     result.append(rmse(predictions,Y_test))\n",
+    "    result[name] = cross_val_score(model, X, Y, cv=kfold, scoring=scoring).mean()\n",
+    "    print(name,result[name])\n",
+    "    \n",
+    "model_result= pd.DataFrame(data=result.values(),index=result.keys(),columns=['rmse']).sort_values(by='rmse' , ascending=True)\n",
+    "print(model_result)"
    ]
   },
   {
@@ -14413,12 +14543,15 @@
    },
    "outputs": [],
    "source": [
-    "xgboost_model = xgb.XGBRegressor(learning_rate=0.05\n",
-    "                                 , max_depth=12, n_estimators=10, alpha=10, objective ='reg:linear', colsample_bytree = 0.3\n",
-    "                                )\n",
-    "xgboost_model.fit(X_train,Y_train)\n",
+    "xgb_model = xgb.XGBRegressor(learning_rate=0.05, max_depth=12, n_estimators=10, alpha=10, \n",
+    "                                 objective ='reg:linear', colsample_bytree = 0.3)\n",
+    "xgb_model.fit(X_train,Y_train)\n",
+    "y_pred = xgboost_model.predict(X_val)\n",
+    "print('RMSE against Validation set:',rmse(Y_val,y_pred)**0.5)\n",
+    "\n",
+    "xgb_model.fit(X,Y)\n",
     "y_pred = xgboost_model.predict(X_test)\n",
-    "print('rmse',metrics.mean_squared_error(Y_test,y_pred)**0.5)"
+    "# print('RMSE against Validation set:',rmse(Y_test,y_pred)**0.5)"
    ]
   }
  ],
